# LazyMins

./: .gitignore  CMakeLists.txt  LazyMins.geany  XX.db  copy_database.sqlite3  copy_sqlite_structure.py  sample.db  scheme_copy.py  test_data.sqlite3
resources/: resources.qrc
resources/database/: base.db3  copy of database.sqlite3  new-structure.db
src/: LazyMins.sql  addcustomerdialog.h  addexpensedialog.h  addorderdialog.h  addproductdialog.h  addrepaymentdialog.h  adduserdialog.h  config.h  csvproductupdaterdialog.h  customermodule.h  customersorderdockwidget.h  customwidgets.h  database.txt  databasequeries.h  datastruct.h  devmode.h  editcustomerdialog.h  editorderdialog.h  editproductdialog.h  editrepaymentdialog.h  expensemodule.h  expensesdockwidget.h  expensesdockwidgetcontents.h  helper.h  itemdelegates.h  konsumenview.h  lazymindatabase.h  logindialog.h  loginnotifier.h  main.cpp  mainwindow.h  managerakun.h  managercustomerdialog.h  managernota.h  managernotadockwidget.h  managerorderdialog.h  managerproductdialog.h  notifier.h  ordersmodule.h  paginatedproxymodel.h  (+20 more)
src/cpp/: addcustomerdialog.cpp  addexpensedialog.cpp  addorderdialog.cpp  addproductdialog.cpp  addrepaymentdialog.cpp  adduserdialog.cpp  adminwindow.cpp  csvproductupdaterdialog.cpp  customermodule.cpp  customersorderdockwidget.cpp  customwidgets.cpp  dbinit.cpp  editcustomerdialog.cpp  editorderdialog.cpp  editproductdialog.cpp  editrepaymentdialog.cpp  expensemodule.cpp  expensesdockwidget.cpp  expensesdockwidgetcontents.cpp  helper.cpp  itemdelegates.cpp  konsumenview.cpp  lazymindatabase.cpp  logindialog.cpp  loginnotifier.cpp  main.cpp  mainwindow.cpp  managerakun.cpp  managercustomerdialog.cpp  managernota.cpp  managernotadockwidget.cpp  managerorderdialog.cpp  managerproductdialog.cpp  ordersmodule.cpp  paginatedproxymodel.cpp  paginatedtableview.cpp  passwordverification.cpp  paymentdialog.cpp  paymentdialog2.cpp  pembuatnota.cpp  (+11 more)
src/database/: customeritem.cpp  customeritem.h  customermanager.cpp  customermanager.h  customersmanager.cpp  customersmanager.h  database.cpp  database.h  databaseitem.h  databasenotifier.cpp  databasenotifier.h  databasetable.h  divisionitem.cpp  divisionitem.h  expenseitem.cpp  expenseitem.h  invoiceitem.cpp  invoiceitem.h  invoicemanager.cpp  invoicemanager.h  invoicepaymentsitem.cpp  invoicepaymentsitem.h  orderitem.cpp  orderitem.h  ordermanager.cpp  ordermanager.h  permissionitem.cpp  permissionitem.h  productitem.cpp  productitem.h  productmanager.cpp  productmanager.h  roleitem.cpp  roleitem.h  rolepermissionsitem.cpp  rolepermissionsitem.h  sample.db  sample_src.db  tablemanager.cpp  tablemanager.h  (+9 more)
src/menus/: menukonsumen.h
src/menus/cpp/: menukonsumen.cpp
src/models/: customermodel.h  flexibletablemodel.h  modelpembayarannota.h  models.h  notamodel.h  produkmodel.h  pvordermodel.h  relationalsalemodel.h  repaymentmodel.h  salemodel.h  tmpsalemodel.h
src/models/cpp/: customermodel.cpp  modelpembayarannota.cpp  notamodel.cpp  produkmodel.cpp  pvordermodel.cpp  relationalsalemodel.cpp  repaymentmodel.cpp  salemodel.cpp  tmpsalemodel.cpp
src/plugins/: lazyminsplugininterface.h
src/sample_data/: copy.db  empty.db  generate_data.py  target.db
src/ui/: addcustomerdialog.h  adminwindow.cpp  adminwindow.h  createaccountdialog.cpp  createaccountdialog.h  createcustomerdialog.cpp  createcustomerdialog.h  createinvoicedialog.cpp  createinvoicedialog.h  createorderdialog.cpp  createorderdialog.h  createpaymentdialog.cpp  createpaymentdialog.h  createproductdialog.cpp  createproductdialog.h  customerpickerdialog.cpp  customerpickerdialog.h  dashboardwidget.cpp  dashboardwidget.h  dynamicdialog.cpp  dynamicdialog.h  editcustomerdialog.cpp  editcustomerdialog.h  editorderdialog.cpp  editorderdialog.h  editproductdialog.cpp  editproductdialog.h  invoicesmanagerdialog.cpp  invoicesmanagerdialog.h  loginform.cpp  loginform.h  mainwindow.cpp  mainwindow.h  new 1  productpickerdialog.cpp  productpickerdialog.h
src/ui-files/: adminwindow.ui
src/ui/dockwidgets/: customerorderswidget.cpp  customerorderswidget.h  dailywidget.cpp  dailywidget.h  summarydockwidget.cpp  summarydockwidget.h
src/ui/files/: adminwindow.ui  createaccountdialog.ui  createcustomerdialog.ui  createinvoicedialog.ui  createorderdialog.ui  createpaymentdialog.ui  createproductdialog.ui  customerdialog.ui  customerorderswidget.ui  customerpickerdialog.ui  dailywidget.ui  dashboardwidget.ui  editorderdialog.ui  invoicesmanagerdialog.ui  loginform.ui  mainwindow.ui  ordersmanagerdialog.ui  productpickerdialog.ui
src/ui/models/: createordermodel.cpp  createordermodel.h  invoicesmanagermodel.cpp  (+1 more)
src2/: CMakeLists.txt  paginatedtableview.ui  testuserapi.cpp
test/: CMakeLists.txt  README.txt  dateconverttest.py  datetimeconverttest.cpp  testDefClassAfter.cpp  test_database_api.cpp  testpaginatedtable.cpp
test/qtsocket/: clienthandler.py  comunicator.cpp  comunicator.h  comunicator.py  connectionhandler.cpp  main.cpp  main.py  myserver.cpp  myserver.py  runnable.cpp  runnable.py  test.py
testData/: CMakeLists.txt  testBackupDatabase.cpp
testData/PluginsExample/: CMakeLists.txt  main.cpp  menubarmodifierinterface.h  menubarplugin.cpp  menubarplugin.h  menubarplugin.json
tools/: databasetools.py  sample_src.db  sample_src.db_emptied.db
ui/: TableViewer.ui  addcustomerdialog.ui  addexpensedialog.ui  addorderdialog.ui  addproductdialog.ui  addrepaymentdialog.ui  adduserdialog.ui  csvproductupdaterdialog.ui  customersorderdockwidget.ui  editcustomerdialog.ui  editorderdialog.ui  editproductdialog.ui  editrepaymentdialog.ui  expensesdockwidget.ui  expensesdockwidgetcontents.ui  lazymins.qrc  logindialog.ui  mainwindow.ui  managerakun.ui  managercustomerdialog.ui  managernota.ui  managernotadockwidget.ui  managerorderdialog.ui  managerproductdialog.ui  paymentdialog.ui  paymenteditdialog.ui  pembuatnota.ui  productsdockwidget.ui  removecustomerdialog.ui  removeproductdialog.ui  res.rc  resetpassword.ui  tabelkonsumen.ui  tabelrepayment.ui  userbioeditor.ui  userform.ui
(+5 files in other folders)
